--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^3.13.2",
+    "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.11",
     "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "react": "^16.7.0",
+    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -15,9 +20,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -28,5 +33,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "."
 }
