--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "less-loader": "^4.1.0",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
-    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
@@ -35,5 +34,14 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "."
+  "homepage": ".",
+  "devDependencies": {
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "^23.6.0",
+    "react-dom": "^16.8.4",
+    "react-test-renderer": "^16.8.4"
+  }
 }
